<resources>
    <string name="app_name">Stopwatch For Competitions</string>
    <string name="btn_back_description">Back button</string>
    <string name="album_cover_description">Event cover</string>
    <string name="btn_edit_race_description">Edit race information button</string>
    <string name="default_timer">00:00.0</string>
    <string name="athlete_number_hint">PARTICIPANT NO.</string>
    <string name="athlete_number_fast_result">Participant no.</string>
    <string name="total_lap_fast_result">Number of laps</string>
    <string name="total_time_fast_result">Total time</string>
    <string name="btn_start_stop_description">Start or finish race button</string>
    <string name="btn_menu_description">Menu button</string>
    <string name="btn_add_result_description">Add participant result button</string>
    <string name="btn_delete_number_description">Delete digit button</string>
    <string name="empty_field_description">Empty field</string>
    <string name="figure_one">1</string>
    <string name="figure_two">2</string>
    <string name="figure_three">3</string>
    <string name="figure_four">4</string>
    <string name="figure_five">5</string>
    <string name="figure_six">6</string>
    <string name="figure_seven">7</string>
    <string name="figure_eight">8</string>
    <string name="figure_nine">9</string>
    <string name="figure_zero">0</string>
    <string name="cant_save_file">Can\'t save file</string>
    <string name="number_header">No.</string>
    <string name="total_lap_header">Laps\ncompleted</string>
    <string name="last_lap_time_header">Lap\ntime</string>
    <string name="total_time_fast_result_header">Total\ntime</string>
    <string name="athlete_position_header">Pos.\n</string>
    <string name="athlete_number_header">No.\n</string>
    <string name="total_laps_header">Laps\n</string>
    <string name="average_pace_header">Avg. pace\n(min/km)</string>
    <string name="average_speed_header">Avg. speed\n(km/h)</string>
    <string name="total_time_header">Total\ntime</string>
    <string name="btn_open_close_laps_detail_description">Detailed information about completed laps button</string>
    <string name="not_available">n/a</string>
    <string name="lap_number_header">Lap</string>
    <string name="pace_header">Pace\n(min/km)</string>
    <string name="speed_header">Speed\n(km/h)</string>
    <string name="lap_time_header">Lap\ntime</string>
    <string name="btn_album_cover_description">Change event cover button</string>
    <string name="btn_delete_album_cover_description">Delete event cover button</string>
    <string name="btn_delete_race_description">Delete event button</string>
    <string name="btn_save_race_description">Save changes and exit button</string>
    <string name="race_name_hint">Enter name</string>
    <string name="race_description_hint">Enter description</string>
    <string name="lap_distance_hint">Enter lap length</string>
    <string name="total_lap_in_race_hint">Enter number of laps</string>
    <string name="change_competition">Change event</string>
    <string name="race_name">Event\nname</string>
    <string name="race_description">Description</string>
    <string name="delete_competition">Delete event</string>
    <string name="start_data">Start date</string>
    <string name="start_time">Start time</string>
    <string name="lap_distance">Lap length\n(in meters)</string>
    <string name="total_lap_in_race">Laps in\nrace</string>
    <string name="lap_distance_race_detail">Lap length (in meters)</string>
    <string name="race_name_race_detail">Event name</string>
    <string name="race_detail_header">Race information</string>
    <string name="position">Position</string>
    <string name="athlete_number">No.\nparticipant</string>
    <string name="total_lap">Number of\nlaps</string>
    <string name="total_time">Total\ntime</string>
    <string name="lap_number">Lap no.</string>
    <string name="pace">Pace m/km</string>
    <string name="speed">Speed km/h</string>
    <string name="lap_time">Lap time</string>
    <string name="total_lap_in_race_heading">Number of laps\nin race</string>
    <string name="btn_sorting_description">Race information sorting button</string>
    <string name="btn_favorite_description">Add event to favorites button</string>
    <string name="btn_save_result_xls_description">Save results to phone memory button</string>
    <string name="btn_open_race_result_description">Detailed information about results button</string>
    <string name="save_competition_heading">Race information</string>
    <string name="number_of_athletes">Number of\nparticipants</string>
    <string name="save_race_xls">Save\nas .xls</string>
    <string name="race_result">Results</string>
    <string name="save_msg">File downloaded to folder:\n</string>
    <string name="xls">xls</string>
    <string name="empty_result">There are no participants in this event</string>
    <string name="xls_name">race result</string>
    <string name="ic_sorting_description">Selected sorting parameter</string>
    <string name="pos_first_to_last">Position (from first)</string>
    <string name="pos_last_to_first">Position (from last)</string>
    <string name="num_first_to_last">Number (ascending)</string>
    <string name="num_last_to_first">Number (descending)</string>
    <string name="title_save">Save</string>
    <string name="title_back">Exit</string>
    <string name="title_delete">Delete</string>
    <string name="title_stop_race">Finish</string>
    <string name="message_save">Save changes and exit?</string>
    <string name="message_back">Exit without saving?</string>
    <string name="message_delete_race">Delete event from history?</string>
    <string name="message_delete_img">Delete event cover?</string>
    <string name="message_stop_race">Finish the event and proceed to view and save results?</string>
    <string name="answer_positive">Yes</string>
    <string name="answer_negative">No</string>
    <string name="stop_race_answer_positive">Finish</string>
    <string name="stop_race_answer_negative">Cancel</string>
    <string name="btn_settings_description">Settings button</string>
    <string name="race_history_heading">History</string>
    <string name="start_data_tv">Date</string>
    <string name="start_time_tv">Start time</string>
    <string name="race_name_tv">Name</string>
    <string name="athletes_in_race_tv">Participants</string>
    <string name="distance_tv">Distance</string>
    <string name="race_history_place_holder_text">History is empty</string>
    <string name="settings_heading">Settings</string>
    <string name="night_tv">Dark theme</string>
    <string name="share_tv">Share the app</string>
    <string name="support_tv">Contact the author</string>
    <string name="agreement_tv">Privacy policy</string>
    <string name="share_url">https://play.google.com/store/apps/details?id=com.jaroapps.stopwatchforcompetitions</string>
    <string name="email_support">jar89apps@gmail.com</string>
    <string name="email_support_subject">Stopwatch for competitions</string>
    <string name="email_support_message"> </string>
    <string name="user_agreement_url"> </string>
    <string name="support_project">Support the project</string>
    <string name="support_project_text">If you liked my app and are ready to support the project financially, you can do so using the Donate.stream service by Yandex. By clicking the button below, you will go to the project page in the Donate.stream service, where you can transfer any amount and leave a message in which you can describe improvements and new features, such changes will be considered for addition on a priority basis.</string>
    <string name="rate_project_text">You can also rate the app and leave a review, it will help with promotion.</string>
    <string name="support_project_btn">Donate stream</string>
    <string name="rate_project_btn">Rate the app</string>
    <string name="donate_stream_url">https://donate.stream/jar_apps</string>
    <string name="rate_app_url">https://play.google.com/store/apps/details?id=com.jaroapps.stopwatchforcompetitions</string>
    <string name="privacy_policy_heading">Privacy Policy</string>
</resources>