<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailResultItemBg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="6dp"
    android:background="@drawable/bg_athlete_result_in_progress_item"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/raceDetailHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/openCloseLapsIc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/btn_open_close_laps_detail_description"
            android:padding="6dp"
            android:src="@drawable/ic_open_laps_info"
            app:tint="@color/black_universal" />

        <TextView
            android:id="@+id/athletePositionHeader"
            style="@style/AthleteDetailResultTxHeader"
            android:layout_marginStart="0dp"
            android:text="@string/athlete_position_header" />

        <TextView
            android:id="@+id/athletePosition"
            style="@style/AthleteDetailResultTx"
            tools:text="1" />

        <TextView
            android:id="@+id/athleteNumberHeader"
            style="@style/AthleteDetailResultTxHeader"
            android:text="@string/athlete_number_header" />

        <TextView
            android:id="@+id/athleteNumber"
            style="@style/AthleteDetailResultTx"
            tools:text="25" />

        <TextView
            android:id="@+id/totalLapsHeader"
            style="@style/AthleteDetailResultTxHeader"
            android:text="@string/total_laps_header" />

        <TextView
            android:id="@+id/totalLaps"
            style="@style/AthleteDetailResultTx"
            tools:text="10" />

        <TextView
            android:id="@+id/totalTimeHeader"
            style="@style/AthleteDetailResultTxHeader"
            android:text="@string/total_time_header" />

        <TextView
            android:id="@+id/totalTime"
            style="@style/AthleteDetailResultTx"
            tools:text="21:14.1" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lapsDetailRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceDetailHeader"
        tools:itemCount="5"
        tools:listitem="@layout/detail_lap_item"
        tools:visibility="visible" />

</LinearLayout>