<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_day_night"
    tools:context=".ui.race_detail.fragment.RaceDetailFragment">

    <LinearLayout
        android:id="@+id/headerGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_day_night"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_back_description"
            android:padding="18dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/raceInfoHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/race_detail_header"
            android:textColor="@color/black_day_night"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_edit_race_description"
            android:padding="14dp"
            android:src="@drawable/ic_edit_new" />

    </LinearLayout>

    <TextView
        android:id="@+id/startDateHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_data"
        android:textColor="@color/black_day_night"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerGroup" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_day_night"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/startDateHeading"
        app:layout_constraintStart_toStartOf="@+id/lapDistance"
        app:layout_constraintTop_toTopOf="@+id/startDateHeading"
        tools:text="10.10.2023" />

    <TextView
        android:id="@+id/startTimeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_time"
        android:textColor="@color/black_day_night"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/startDateHeading"
        app:layout_constraintTop_toBottomOf="@+id/startDateHeading" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_day_night"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/startTimeHeading"
        app:layout_constraintStart_toStartOf="@+id/lapDistance"
        app:layout_constraintTop_toTopOf="@+id/startTimeHeading"
        tools:text="15:20" />

    <TextView
        android:id="@+id/raceNameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/race_name_race_detail"
        android:textColor="@color/black_day_night"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/startDateHeading"
        app:layout_constraintTop_toBottomOf="@+id/startTimeHeading" />

    <TextView
        android:id="@+id/raceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black_day_night"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/raceNameHeading"
        app:layout_constraintEnd_toEndOf="@+id/lapDistance"
        app:layout_constraintStart_toStartOf="@+id/lapDistance"
        app:layout_constraintTop_toTopOf="@+id/raceNameHeading" />

    <TextView
        android:id="@+id/lapDistanceHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lap_distance_race_detail"
        android:textColor="@color/black_day_night"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/startDateHeading"
        app:layout_constraintTop_toBottomOf="@+id/raceNameHeading" />

    <TextView
        android:id="@+id/lapDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black_day_night"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lapDistanceHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lapDistanceHeading"
        app:layout_constraintTop_toTopOf="@+id/lapDistanceHeading" />

    <TextView
        android:id="@+id/totalLapInRaceHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_lap_in_race_heading"
        android:textColor="@color/black_day_night"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/startDateHeading"
        app:layout_constraintTop_toBottomOf="@+id/lapDistanceHeading" />

    <TextView
        android:id="@+id/totalLapInRace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black_day_night"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalLapInRaceHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lapDistanceHeading"
        app:layout_constraintTop_toTopOf="@+id/totalLapInRaceHeading" />

    <View
        android:id="@+id/raceInfoDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/totalLapInRaceHeading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/raceDetailRv"
        android:layout_width="match_parent"
        android:background="@color/bg_header_edit_race_day_night"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceInfoDivider"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="5"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/detail_result_item" />

</androidx.constraintlayout.widget.ConstraintLayout>